[tool.poetry]
name = "bed_apy"
version = "0.1.2-alpha"
description = "A Bedrock WebSocket system for Minecraft Python modding"
authors = ["Ezekiel Nogle"]
[project]
license = "GPL-3.0-or-later"
readme = "README.md"
[dependencies]
websockets = "^10.4"
asyncio = "^3.4.3"
json = "^2.0.9"
uuid = "^1.30"
urllib = "^1.26.16"
base64 = "^1.0.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
